--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         Studio Freelancer Arrow Tech Digital
     </div>
     <br>
-    <div id="userName">WebSites | UX Designer | Social Media</div>
+    <div id="userName">Desenvolvimento de Sites | Aplicativos e Sistemas | Design | Tráfego Pago</div>
 
     <div id="links">
       <a class="link" href="https://www.arrowtechdigital.com.br" target="_blank"><i
-        class="fas fa-globe">&nbsp;</i>Conheça nosso Site</a>
+        class="fas fa-globe">&nbsp;</i>Acesse nosso siee</a>
       <a class="link" href="https://www.instagram.com/studioarrowtech/" target="_blank">
           <i class="fab fa-instagram">&nbsp;</i>Instagram</a>
         <a class="link" href="https://api.whatsapp.com/send?phone=5519971605647" target="_blank">
