--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div id="links">
       <a class="link" href="https://www.arrowtechdigital.com.br" target="_blank"><i
-        class="fas fa-globe">&nbsp;</i>Acesse nosso siee</a>
+        class="fas fa-globe">&nbsp;</i>Acesse nosso site</a>
       <a class="link" href="https://www.instagram.com/studioarrowtech/" target="_blank">
           <i class="fab fa-instagram">&nbsp;</i>Instagram</a>
         <a class="link" href="https://api.whatsapp.com/send?phone=5519971605647" target="_blank">
